--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://aadityajadhav.github.io/Minecraft-Portfolio",
+  "homepage": "https://aadityajadhav.github.io/Minecraft-Portfolio/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "framer-motion": "^11.0.8",
+    "gh-pages": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "framer-motion": "^11.0.8",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
